# ObjectPiscine

./: .gitignore  README.md
module_00_encapsulation/ex00/: Makefile
module_00_encapsulation/ex00/inc/: Bank.hpp
module_00_encapsulation/ex00/src/: Bank.cpp  BankAccount.cpp  DivideAndRule.cpp  main.cpp
module_00_encapsulation/ex01/: CMakeLists.txt
module_00_encapsulation/ex01/.cache/clangd/index/: Graph.cpp.5B5217D3CE251245.idx  Graph.h.EB885FAFDAD3C28E.idx  Vector2.cpp.74A341A3E4E182B2.idx  Vector2.h.71892ECEAB5041D1.idx  main.cpp.77AE7BA08A8202D0.idx
module_00_encapsulation/ex01/inc/: Graph.h  Vector2.h
module_00_encapsulation/ex01/src/: CMakeLists.txt  Graph.cpp  Vector2.cpp  main.cpp
module_01_relationship/ex00/: CMakeLists.txt  compile_commands.json  relationship
module_01_relationship/ex00/inc/: Hammer.hpp  ITool.hpp  IWorkshop.hpp  Position.hpp  Shovel.hpp  Statistic.hpp  Tool.hpp  Worker.hpp  WorkerToolManager.hpp  Workshop.hpp
module_01_relationship/ex00/src/: CMakeLists.txt  Hammer.cpp  Shovel.cpp  Tool.cpp  Worker.cpp  main.cpp
module_02_uml/ex00/: CMakeLists.txt  Untitled Diagram.drawio
module_02_uml/ex00/inc/: Brake.hpp  BrakeController.hpp  Car.hpp  Cockpit.hpp  Crankshaft.hpp  DAE.hpp  Direction.hpp  Electronics.hpp  ExplosionChamber.hpp  Gear.hpp  GearLever.hpp  Injector.hpp  LinkablePart.hpp  Motor.hpp  Pedal.hpp  Singleton.hpp  SteerWheel.hpp  Transmission.hpp  Wheel.hpp
module_02_uml/ex00/src/: CMakeLists.txt  main.cpp
module_03_smart/ex00/: CMakeLists.txt  compile_commands.json
module_03_smart/ex00/inc/: car.hpp
module_03_smart/ex00/src/: CMakeLists.txt  main.cpp
module_03_smart/ex01/: CMakeLists.txt  compile_commands.json
module_03_smart/ex01/inc/: Command.hpp  IDiscountedPrice.hpp  PackageReductionDiscountCommand.hpp  TuesdayDiscountCommand.hpp
module_03_smart/ex01/src/: CMakeLists.txt  main.cpp
module_03_smart/ex02/: CMakeLists.txt  compile_commands.json
module_03_smart/ex02/inc/: Circle.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
module_03_smart/ex02/src/: CMakeLists.txt  main.cpp
module_03_smart/ex03/: CMakeLists.txt  isp
module_03_smart/ex03/inc/: Apprentice.hpp  ContractEmployee.hpp  EmployeeManager.hpp  IEmployee.hpp  TempWorker.hpp
module_03_smart/ex03/src/: CMakeLists.txt  main.cpp
module_04_design_patterns/ex00/: CMakeLists.txt
module_04_design_patterns/ex00/inc/Course/: Course.hpp
module_04_design_patterns/ex00/inc/Event/: Event.hpp
module_04_design_patterns/ex00/inc/Form/: CourseFinishedForm.hpp  FormType.hpp  NeedCourseCreationForm.hpp  SubscriptionToCourseForm.hpp
module_04_design_patterns/ex00/inc/Form/Contract/: IForm.hpp
module_04_design_patterns/ex00/inc/Person/: Headmaster.hpp  Professor.hpp  Secretary.hpp  Student.hpp
module_04_design_patterns/ex00/inc/Person/Contract/: IPerson.hpp  IStaff.hpp
module_04_design_patterns/ex00/inc/SchoolSpace/: Classroom.hpp  Courtyard.hpp  HeadmasterOffice.hpp  SecretarialOffice.hpp  StaffRestRoom.hpp
module_04_design_patterns/ex00/inc/SchoolSpace/Contract/: ISchoolSpace.hpp
module_04_design_patterns/ex00/src/: CMakeLists.txt
module_04_design_patterns/ex01/inc/Form/: CourseFinishedForm.hpp  NeedMoreClassRoomForm.hpp
module_04_design_patterns/ex01/inc/Form/Contract/: IForm.hpp
module_04_design_patterns/ex01/inc/Person/: Headmaster.hpp  Professor.hpp  Secretary.hpp  Student.hpp
module_04_design_patterns/ex01/inc/SchoolSpace/: Classroom.hpp  Courtyard.hpp  HeadmasterOffice.hpp  SecretarialOffice.hpp  StaffRestRoom.hpp
module_04_design_patterns/ex01/src/: CMakeLists.txt
module_04_design_patterns/ex01/src/Course/: CMakeLists.txt  Course.cpp
module_04_design_patterns/ex01/src/Person/: CMakeLists.txt  Student.cpp
